--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,112 @@
-.App {
+body {
+  background-color: #123753;
+  color: #fff;
+}
+
+header {
+  background-color: #05b3ee;
+  height: 50px;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+.hide {
+  display: none;
+}
+
+.drag-over {
+  border: dashed 3px red;
+}
+
+.cardContainer {
+  background-color: #d9dfe9;
+  float: left;
+  position: relative;
+  color: #000;
+  width: 20%;
+  margin: 55px 15px;
+  border-radius: 5px;
+}
+
+.cardContainer h3 {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.tasksContainer {
+  background-color: #fff;
+  margin: 5%;
+  box-shadow: 0 2px 5px #aaa;
+  padding: 5%;
+  border-radius: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.addNewCard {
+  position: fixed;
+  top: 65px;
+  right: 25px;
+  background-color: #05b3ee;
+  height: 45px;
+  width: 45px;
+  font-weight: bold;
+  font-size: 18px;
+  border: none;
+  box-shadow: none;
+  border-radius: 25px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.addNewTask {
+  text-align: center;
+  max-width: 95%;
+  margin: 6%;
 }
 
-.App-link {
-  color: #61dafb;
+.addNewTask input {
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid #05b3ee;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.addNewTask button {
+  background: transparent;
+  border: none;
+  box-shadow: none;
+  font-weight: bold;
+  font-size: 15px;
+}
+
+.deleteButton {
+  background-color: transparent;
+  border: 1px solid red;
+  color: #000;
+  border-radius: 5px;
+}
+
+.cardContainer .deleteButton {
+  height: 30px;
+  margin: 5% 35%;
+}
+
+.tasksContainer div, .tasksContainer input {
+  width: 50%;
+  float: left;
+  word-break: break-word;
+}
+
+.tasksContainer .editButton {
+  width: 20%;
+  background-color: transparent;
+  border: 1px solid #05b3ee;
+  color: #000;
+  height: 25px;
+  border-radius: 5px;
+  margin: 0 0 0 1.5%;
+}
+
+.tasksContainer .deleteButton {
+  margin: 0;
+  width: 22%;
+  margin: 0 1.5%;
+  height: 25px;
 }
